# CppTerminalUtils

./: CMakeLists.txt  README.md
include/: SelectionMenu.h  TerminalUtilities.h
src/: SelectionMenu.cpp  TerminalUtilities.cpp
